# rtracklayer

./: .gitignore  DESCRIPTION  INSTALL  LICENSE  NAMESPACE  NEWS  TODO  configure  configure.ac  load.R
R/: Alignment-class.R  argo.R  bam.R  bed.R  bigBed.R  bigWig.R  browser.R  chain.R  compression.R  fasta.R  gff.R  igv.R  index.R  io.R  ncbi.R  quickload.R  ranges.R  readGFF.R  segment.R  tabix.R  test_rtracklayer_package.R  trackDb.R  trackSet.R  trackTable.R  trackhub.R  twobit.R  ucsc.R  utils.R  web.R  wig.R  xmfa.R  zzz.R
data/: cpneTrack.rda  targets.rda
demo/: .Rhistory  00Index  targets.R
inst/: CITATION
inst/doc/: cpneTrack.R  rtracklayer.Rnw
man/: BEDFile-class.Rd  BamFile-methods.Rd  Bed15TrackLine-class.Rd  BigBedFile.Rd  BigBedSelection.rd  BigWigFile.Rd  BigWigSelection-class.Rd  BrowserViewList-class.Rd  BrowserViewsList-class.Rnw  Chain-class.Rd  FastaFile-class.Rd  GFFFile-class.Rd  GRangesForUCSCGenome.Rd  GenomicData.Rd  GenomicSelection.Rd  IntegerRangesList-methods.Rd  Quickload-class.Rd  QuickloadGenome-class.Rd  RTLFile-class.Rd  RangedData-methods.Rd  RangesList-methods.Rd  TabixFile-methods.Rd  TrackDb-class.Rd  TrackHub-class.Rd  TrackHubGenome-class.Rd  TwoBitFile-class.Rd  UCSCData-class.Rd  UCSCFile-class.Rd  UCSCSchema-class.Rd  UCSCTableQuery-class.Rd  WIGFile-class.Rd  XMFAFile-class.Rd  activeView-methods.Rd  argoSession-class.Rd  argoView-class.Rd  asBED.Rd  asGFF.Rd  basicTrackLine-class.Rd  blocks-methods.Rd  browseGenome.Rd  (+41 more)
src/: Makevars  Makevars.common  Makevars.common.in  Makevars.in  Makevars.win  R_init_rtracklayer.c  S4Vectors_stubs.c  XVector_stubs.c  bbiHelper.c  bbiHelper.h  bigBed.c  bigBed.h  bigBedHelper.c  bigBedHelper.h  bigWig.c  bigWig.h  chain_io.c  gff.c  gff.h  handlers.c  readGFF.c  readGFF.h  rtracklayer.h  twoBit.c  twoBit.h  utils.c  utils.h
tests/: rtracklayer_unit_tests.R
vignettes/: rtracklayer.Rnw
(+133 files in other folders)
